kube/revoke-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: revoke
  namespace: default
spec:
  ports:
    - port: 804
      targetPort: 80
  selector:
    service: revoke
  type: NodePort
